welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: ':' expected but ')' found.
def vaChercher(Biscuit) {
                      ^Methods:11: error: identifier expected but '}' found.
	} 
        ^