welcome.lessons.welcome.methods.basics.Methods.scala.code
def vaChercher(Biscuit) {
  recule();
  droite();
  avance();
  gauche();
}

      